--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -13,5 +13,7 @@
   "services_Sub": "Co mogę dla Ciebie zrobić",
   "services_WebDesign_desc": "Wykonuję projekt ui/ux dla stron internetowych, który pomaga im uzyskać wyjątkowy wygląd.",
   "services_WebDev_desc": "Tworzę również strony internetowe o wysokiej wydajności z niesamowitą szybkością.",
-  "services_Responsive_desc": "Tworzę responsywne strony internetowe z efektownym UI dla wszystkich potrzeb mobilnych."
+  "services_Responsive_desc": "Tworzę responsywne strony internetowe z efektownym UI dla wszystkich potrzeb mobilnych.",
+  "projects_Head": "Produkcja w toku...",
+  "projects_Sub": "Ta sekcja będzie dostępna później, po ukończeniu tworzenia backendu"
 }
